# ws

./: .gitignore
docker/: .env  Dockerfile  build_image.sh  entrypoint.sh  run_dev-conteiner.sh
src/mypkg/: package.xml  setup.py
src/mypkg/config/: joint_controllers.yaml  joint_group_controllers.yaml  joint_position_controllers.yaml  test.rviz  trajectory_controllers.yaml
src/mypkg/launch/: controller_manager.launch.py  gazebo_spawn.launch.py  manipulator.launch.py  robot_state.launch.py
src/mypkg/mypkg/: hello_node.py  joint_commander.py  joint_group_controller.py  joint_state_plotter.py  ptp_controller.py  pub_robot.py  trajectory_controller.py
src/mypkg/urdf/: two_link_manipulator.urdf  two_link_manipulator.urdf.xacro  two_link_manipulator_control.urdf.xacro  two_link_manipulator_mech.urdf.xacro
src/physics_sim/: package.xml  setup.cfg  setup.py
src/physics_sim/config/: arm_controllers.yaml  gazebo_params.yaml
src/physics_sim/launch/: ball_sim.launch.py
src/physics_sim/models/: ball.sdf
src/physics_sim/physics_sim/: arm_controller.py  ball_spawner.py  ball_state_monitor.py
src/physics_sim/worlds/: empty.world
src/rbsim/: package.xml  setup.cfg  setup.py
